--- a/client/src/style.css
+++ b/client/src/style.css
@@ -15,6 +15,7 @@
 }
 
 main {
+  position: relative;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -121,5 +122,13 @@ li {
 b {
   font-weight: bold;
   margin-right: 4px;
-  font-size: 1.1em;
+  font-size: inherit
+}
+
+h6 {
+  font-size: 15px;
+}
+
+button {
+  cursor: pointer;
 }
