--- a/client/src/style.css
+++ b/client/src/style.css
@@ -1,6 +1,6 @@
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-
+  
   background-color: #8ea5de;
 
   font-synthesis: none;
@@ -48,6 +48,7 @@ main {
 
 h2 {
   font-size: 1.75em;
+  color: #fff
 }
 
 h3 {
@@ -131,4 +132,8 @@ h6 {
 
 button {
   cursor: pointer;
+}
+
+a {
+  color: rgb(239, 223, 81)
 }
